--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<app-nav></app-nav>
-<router-outlet>
+<body>
+    <app-nav ></app-nav>
+    <router-outlet >
+    </router-outlet>
 
-</router-outlet>
+</body><!-- <app-login *ngIf="isAuth == false"></app-login> -->
