--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -1,1 +1,36 @@
-<p>login works!</p>
+<mat-card>
+  <mat-card-content>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
+      <H2>Enregistrement</H2>
+      <mat-error *ngIf="loginInvalid">
+        Le login n'est pas connu
+      </mat-error>
+      <mat-error *ngIf="passwordInvalid">
+        Le mot de pass ne correspond pas au login
+      </mat-error>
+      <mat-form-field class="full-width-input">
+        <input matInput placeholder="Login" formControlName="login" required>
+        <mat-error>
+          Le login est obligatoire.
+        </mat-error>
+      </mat-form-field>
+      <mat-form-field class="full-width-input">
+        <input 
+        matInput placeholder="Mot de passe" 
+        formControlName="password" 
+        required
+        [type]="passwordHide ? 'password' : 'text'"
+        >
+        <mat-icon matSuffix class="hideButton" (click)="passwordHide = !passwordHide">
+          {{passwordHide ? 'visibility_off' : 'visibility'}}
+        </mat-icon>
+        <mat-error>
+          Le mot de passe est obligatoire.
+        </mat-error>
+      </mat-form-field>
+      <button mat-raised-button type="submit" color="primary">Valider</button>
+
+    </form>
+  </mat-card-content>
+
+</mat-card>
