--- a/src/app/auth/Components/login/login.component.html
+++ b/src/app/auth/Components/login/login.component.html
@@ -8,13 +8,13 @@
       <mat-error *ngIf="passwordInvalid">
         Le mot de pass ne correspond pas au login
       </mat-error>
-      <mat-form-field class="full-width-input">
+      <mat-form-field>
         <input matInput placeholder="Login" formControlName="login" required>
         <mat-error>
           Le login est obligatoire.
         </mat-error>
       </mat-form-field>
-      <mat-form-field class="full-width-input">
+      <mat-form-field>
         <input 
         matInput placeholder="Mot de passe" 
         formControlName="password" 
@@ -28,7 +28,13 @@
           Le mot de passe est obligatoire.
         </mat-error>
       </mat-form-field>
-      <button mat-raised-button type="submit" color="primary">Valider</button>
+      
+      <button 
+      mat-raised-button 
+      type="submit" 
+      color="primary"
+      [disabled]="form.invalid">Valider</button>
+      
 
     </form>
   </mat-card-content>
