--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,26 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import '~@angular/material/theming';
+@include mat-core();
+
+$mat-theming-primary : mat-palette($mat-teal);
+$mat-theming-accent : mat-palette($mat-pink, A200, A100, A400);
+$mat-theming-warn: mat-palette($mat-red, 350);
+$mat-theming-background: mat-palette($mat-gray, 600);
+
+$mat-theming-theme: mat-light-theme($mat-theming-primary, $mat-theming-accent, $mat-theming-warn);
+$mat-theming-theme-dark: mat-dark-theme($mat-theming-primary, $mat-theming-accent, $mat-theming-warn);
+
+@include angular-material-theme($mat-theming-theme);
+
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.theme-dark{
+    @include angular-material-theme($mat-theming-theme-dark);
+}
+
+.theme-light{
+    @include angular-material-theme($mat-theming-theme);
+
+}
