--- a/src/app/auth/Components/login/login.component.html
+++ b/src/app/auth/Components/login/login.component.html
@@ -2,11 +2,8 @@
   <mat-card-content>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
       <H2>Enregistrement</H2>
-      <mat-error *ngIf="loginInvalid">
-        Le login n'est pas connu
-      </mat-error>
-      <mat-error *ngIf="passwordInvalid">
-        Le mot de pass ne correspond pas au login
+      <mat-error *ngIf="error == true">
+        {{this.errorMsg}}
       </mat-error>
       <mat-form-field>
         <input matInput placeholder="Login" formControlName="login" required>
@@ -32,7 +29,7 @@
       <button 
       mat-raised-button 
       type="submit" 
-      color="primary"
+      color="primary" 
       [disabled]="form.invalid">Valider</button>
       
 
