--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,8 @@
 .backGroundLightEvent{
     background-color: white;
+    color: black;
 }
 .backGroundDarkEvent{
     background-color:#4f4f4f ;
+    color: white;
 }
