details User ok(reste à rendre le calendrier interractif)

--- a/src/app/Modules/auth/Components/reset-password/reset-password.component.html
+++ b/src/app/Modules/auth/Components/reset-password/reset-password.component.html
@@ -1,44 +1,44 @@
-<mat-card>
-    <mat-card-content>
-      <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <H2>Changer votre mot de passe</H2>
+<H2 mat-dialog-title>Changez votre mot de passe</H2>
+  <mat-dialog-content>
+    <form [formGroup]="form" (ngSubmit)="onSubmit()">
 
-        <mat-error *ngIf="passwordInvalid == true">
-            {{this.error}}
+      <mat-error *ngIf="passwordInvalid == true">
+          {{this.error}}
+      </mat-error>
+
+      
+      <mat-form-field>
+        <input 
+        matInput placeholder="Mot de passe" 
+        formControlName="password" 
+        required
+        type="password"
+        >
+        <mat-error>
+          Le mot de passe est obligatoire.
         </mat-error>
-
-        
-        <mat-form-field>
+      </mat-form-field>
+      <mat-form-field>
           <input 
-          matInput placeholder="Mot de passe" 
-          formControlName="password" 
+          matInput placeholder="Confirmez le mot de passe" 
+          formControlName="confirmPassword" 
           required
-          type="password"
+        type="password"
           >
           <mat-error>
-            Le mot de passe est obligatoire.
+            La confirmation est obligatoire.
           </mat-error>
         </mat-form-field>
-        <mat-form-field>
-            <input 
-            matInput placeholder="Confirmez le mot de passe" 
-            formControlName="confirmPassword" 
-            required
-          type="password"
-            >
-            <mat-error>
-              La confirmation est obligatoire.
-            </mat-error>
-          </mat-form-field>
-        
-        <button 
-        mat-raised-button 
-        type="submit" 
-        color="primary"
-        [disabled]="form.invalid">Valider</button>
-        
+      <div mat-dialog-actions>
+      <button 
+      mat-dialog-close
+      mat-raised-button 
+      type="submit" 
+      color="primary"
+      [disabled]="form.invalid">Valider</button>
+    </div>
+      
+
+    </form>
+  </mat-dialog-content>
   
-      </form>
-    </mat-card-content>
-  
-</mat-card>
