--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -43,12 +43,11 @@ matTooltip="logout"
 
   <span class="spacer"></span>
 
-  <button  mat-icon-button [routerLink]="['reset-password']"
-    matTooltip="reset-password">
-  <mat-icon>vpn_key</mat-icon>
-  </button>
-
-  <button mat-icon-button  matTooltip="ToDo" >
+  <button mat-icon-button  
+  matTooltip="ToDo" 
+  matBadge="5" 
+  matBadgeColor="accent"
+ >
     <mat-icon>content_paste</mat-icon>
   </button>
 
