Professor : ClassList (début)

--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -189,7 +189,8 @@ matTooltip="logout"
       <span>Résultats</span>
     </button>
 
-    <button mat-menu-item> 
+    <button mat-menu-item
+    [routerLink]="['students']"> 
       <mat-icon>child_care</mat-icon>
       <span>Etudiants</span>
     </button>
