Trimestrial Info get + delete OK

--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -190,7 +190,7 @@ matTooltip="logout"
     </button>
 
     <button mat-menu-item
-    [routerLink]="['students']"> 
+    [routerLink]="['listeEtudiant']"> 
       <mat-icon>child_care</mat-icon>
       <span>Etudiants</span>
     </button>
