--- a/src/app/Modules/auth/Components/reset-password/reset-password.component.html
+++ b/src/app/Modules/auth/Components/reset-password/reset-password.component.html
@@ -1,42 +1,39 @@
 <H2 mat-dialog-title>Changez votre mot de passe</H2>
   <mat-dialog-content>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-
       <mat-error *ngIf="passwordInvalid == true">
           {{this.error}}
       </mat-error>
-
-      
+     
       <mat-form-field>
         <input 
-        matInput placeholder="Mot de passe" 
-        formControlName="password" 
-        required
-        type="password"
-        >
+          matInput placeholder="Nouveau mot de passe" 
+          formControlName="password" 
+          required
+          type="password">
         <mat-error>
           Le mot de passe est obligatoire.
         </mat-error>
       </mat-form-field>
+
       <mat-form-field>
-          <input 
+        <input 
           matInput placeholder="Confirmez le mot de passe" 
           formControlName="confirmPassword" 
           required
-        type="password"
-          >
+          type="password">
           <mat-error>
             La confirmation est obligatoire.
           </mat-error>
         </mat-form-field>
-      <div mat-dialog-actions>
+
+      
       <button 
       mat-dialog-close
       mat-raised-button 
       type="submit" 
       color="primary"
       [disabled]="form.invalid">Valider</button>
-    </div>
       
 
     </form>
