note update works !

--- a/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
+++ b/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
@@ -20,7 +20,7 @@
                 </mat-expansion-panel-header>              
                 <p> {{note.description}} </p>
                 <button mat-button color="accent" (click)="openDeleteDialog(note.id)">Supprimer</button>
-                <button mat-button color="primary" [routerLink]="['../update/'+note.id]">Mettre à jour</button>     
+                <button mat-button color="primary" (click)="openUpdateDialog(note)">Mettre à jour</button>     
             </mat-expansion-panel>
         </mat-accordion>
     </div>
