TestResults by studentId en cours. (delete, get/getbyid => ok)

--- a/src/app/Components/confirmBox/Delete/delete.component.html
+++ b/src/app/Components/confirmBox/Delete/delete.component.html
@@ -1,4 +1,4 @@
-<H2 mat-dialog-title>Etes vous sûr de vouloir supprimer cette note ?</H2>
+<H2 mat-dialog-title>Etes vous sûr de vouloir valider cette action ?</H2>
   <mat-dialog-content>
 
         <button 
