--- a/src/app/Modules/auth/Components/reset-password/reset-password.component.html
+++ b/src/app/Modules/auth/Components/reset-password/reset-password.component.html
@@ -1,8 +1,8 @@
 <H2 mat-dialog-title>Changez votre mot de passe</H2>
   <mat-dialog-content>
     <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <mat-error *ngIf="passwordInvalid == true">
-          {{this.error}}
+      <mat-error *ngIf="error == true">
+          {{this.errorMsg}}
       </mat-error>
      
       <mat-form-field>
@@ -29,7 +29,6 @@
 
       
       <button 
-      mat-dialog-close
       mat-raised-button 
       type="submit" 
       color="primary"
