--- a/src/app/Modules/professor/Components/student-list/student-list.component.html
+++ b/src/app/Modules/professor/Components/student-list/student-list.component.html
@@ -13,11 +13,11 @@
                         matTooltip="Details">
                         <mat-icon>description</mat-icon>
                 </button>
-                <button  mat-icon-button [routerLink]="['../noteTrimestrielle/'+student.id]"
+                <button  mat-icon-button [routerLink]="['../notesTrimestrielle/'+student.id]"
                 matTooltip="consulter les notes trimestrielles">
                 <mat-icon>note_add</mat-icon>
                 </button>
-                <button  mat-icon-button [routerLink]="['../home']"
+                <button  mat-icon-button [routerLink]="['../testResult/'+student.id]"
                 matTooltip="Resultats">
                 <mat-icon>show_chart</mat-icon>
                 </button>
