--- a/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
+++ b/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
@@ -1,6 +1,6 @@
 <div>
     <button mat-button color="war" [routerLink]="['../../listeEtudiant']">Retour</button>
-    <button mat-button color="primary" [routerLink]="['../create']">Créer</button>
+    <button mat-button color="primary" (click)="openCreateDialog(this.studentId)">Créer</button>
 
     
 </div>
