--- a/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
+++ b/src/app/Modules/professor/Components/trimestrial-note/trimestrial-note.component.html
@@ -1,5 +1,5 @@
 <div>
-    <button mat-button color="war" [routerLink]="['../../listeEtudiant']">Retour</button>
+    <button mat-button color="war" [routerLink]="['../../Etudiants']">Retour</button>
     <button mat-button color="primary" (click)="openCreateDialog(this.studentId)">Créer</button>
 
     
