--- a/src/app/Modules/auth/Components/reset-password/reset-password.component.html
+++ b/src/app/Modules/auth/Components/reset-password/reset-password.component.html
@@ -27,7 +27,12 @@
           </mat-error>
         </mat-form-field>
 
-      
+      <button
+        mat-dialog-close
+        mat-raised-button
+        color="accent"
+      >Annuller</button>
+
       <button 
       mat-raised-button 
       type="submit" 
